--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -209,23 +209,20 @@
        "9                     0.232   54        1  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import model_selection\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import classification_report\n",
     "plt.close(\"all\")\n",
     "\n",
     "data = pd.read_csv(\"Healthcare-Diabetes.csv\", sep=\",\")\n",
@@ -242,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +248,7 @@
        "27680"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +285,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +496,7 @@
        "max       1.000000  "
       ]
      },
-     "execution_count": 225,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,12 +510,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Glucose, BloodPresure, SkinThickness, Insulin, BMI have minimal values 0. This should be researched while data cleaning."
+    "Glucose, BloodPresure, SkinThickness, Insulin, BMI have minimal values 0. This should be further researched while data cleaning to see if values can be 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +524,7 @@
        "(2768, 10)"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,9 +588,9 @@
     "data = data[data[\"BMI\"]!=0]\n",
     "data = data[data[\"SkinThickness\"]!=0]\n",
     "data = data[data[\"BloodPressure\"]!=0]\n",
+    "\n",
     "# It's mostly unlikely in real word for someone to have glucose and insulin -  0 \n",
-    "data = data[data[\"Glucose\"]!=0] \n",
-    "data = data[data[\"Insulin\"]!=0]"
+    "data = data[(data[\"Glucose\"]!=0) & (data[\"Insulin\"]!=0)] "
    ]
   },
   {
@@ -605,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +611,7 @@
        "3573"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -664,12 +661,12 @@
    "metadata": {},
    "source": [
     "As we see, we have people with diabetes in all ranges and vice versa. We can see that most people are in the 0 - 1 range and that people are 3-4 more than people with.\n",
-    "### See the "
+    "### Let's look how features depend on each other with a heatmap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +675,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -699,8 +696,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribution of Age by Diabetes Outcome "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -727,12 +731,13 @@
    "metadata": {},
    "source": [
     "# Creating the model\n",
-    "## Feature Selection"
+    "## Feature Selection\n",
+    "Firstly, we need to find the features with most impact."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -762,37 +767,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>DiabetesPedigreeFunction</td>\n",
        "      <td>4.017798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>BloodPressure</td>\n",
        "      <td>37.496532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>BMI</td>\n",
        "      <td>38.025580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Pregnancies</td>\n",
+       "      <td>79.592328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>SkinThickness</td>\n",
        "      <td>107.954898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>Age</td>\n",
        "      <td>170.984107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>Glucose</td>\n",
        "      <td>792.361129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>Insulin</td>\n",
        "      <td>3235.433070</td>\n",
        "    </tr>\n",
@@ -802,46 +812,50 @@
       ],
       "text/plain": [
        "                   Features        Score\n",
-       "5  DiabetesPedigreeFunction     4.017798\n",
-       "1             BloodPressure    37.496532\n",
-       "4                       BMI    38.025580\n",
-       "2             SkinThickness   107.954898\n",
-       "6                       Age   170.984107\n",
-       "0                   Glucose   792.361129\n",
-       "3                   Insulin  3235.433070"
+       "6  DiabetesPedigreeFunction     4.017798\n",
+       "2             BloodPressure    37.496532\n",
+       "5                       BMI    38.025580\n",
+       "0               Pregnancies    79.592328\n",
+       "3             SkinThickness   107.954898\n",
+       "7                       Age   170.984107\n",
+       "1                   Glucose   792.361129\n",
+       "4                   Insulin  3235.433070"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# X - our features(Age, BMI, BloodThickness etc) and Y is Outcome\n",
-    "X= data.iloc[:,1:8]\n",
-    "Y= data.iloc[:,-1]\n",
+    "# X - our features (Age, BMI, BloodThickness etc.) and Y is Outcome\n",
+    "X = data.iloc[:,0:8]\n",
+    "Y = data.iloc[:,-1]\n",
     "\n",
     "# Selecting best 3 features\n",
-    "best_features= SelectKBest(score_func=chi2, k=3)\n",
-    "fit= best_features.fit(X,Y)\n",
+    "best_features = SelectKBest(score_func=chi2, k=8)\n",
+    "fit = best_features.fit(X,Y)\n",
     "\n",
     "# Creating a data frame for visual representation\n",
-    "df_scores= pd.DataFrame(fit.scores_)\n",
-    "df_columns= pd.DataFrame(X.columns)\n",
+    "df_scores = pd.DataFrame(fit.scores_)\n",
+    "df_columns = pd.DataFrame(X.columns)\n",
     "\n",
-    "features_scores= pd.concat([df_columns, df_scores], axis=1)\n",
-    "features_scores.columns= ['Features', 'Score']\n",
+    "features_scores = pd.concat([df_columns, df_scores], axis=1)\n",
+    "features_scores.columns = ['Features', 'Score']\n",
     "features_scores.sort_values(by = 'Score')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Create the model\n",
+    "We will use logistic regression as it is the best when we have a binary outcome."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -873,18 +887,27 @@
    "source": [
     "X=data[[\"Age\", \"Glucose\", \"Insulin\"]]\n",
     "Y=data[\"Outcome\"]\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X,Y,test_size=0.4,random_state=100)\n",
-    "logreg= LogisticRegression()\n",
+    "# Split our data in training and testing data\n",
+    "# Training data should be larger than our test \n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,Y,test_size=0.4,random_state=100)\n",
+    "logreg = LogisticRegression()\n",
     "logreg.fit(X_train,y_train)\n",
     "\n",
-    "y_pred=logreg.predict(X_test)\n",
-    "print (X_test) #test dataset\n",
-    "print (y_pred) #predicted values"
+    "y_pred = logreg.predict(X_test)\n",
+    "print (X_test) # test dataset\n",
+    "print (y_pred) # predicted values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check model performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -907,10 +930,17 @@
     }
    ],
    "source": [
-    "print(\"Accuracy: \",metrics.accuracy_score(y_test, y_pred))\n",
-    "print(\"Recall: \",metrics.recall_score(y_test, y_pred, zero_division=1))\n",
-    "print(\"Precision:\",metrics.precision_score(y_test, y_pred, zero_division=1))\n",
-    "print(\"CL Report:\",metrics.classification_report(y_test, y_pred, zero_division=1))"
+    "print(\"Accuracy: \", metrics.accuracy_score(y_test, y_pred))\n",
+    "print(\"Recall: \", metrics.recall_score(y_test, y_pred, zero_division=1))\n",
+    "print(\"Precision:\", metrics.precision_score(y_test, y_pred, zero_division=1))\n",
+    "print(\"CL Report:\", metrics.classification_report(y_test, y_pred, zero_division=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We got an accurancy of 79%. After a google search, I found out that industry standards are between 70% and 90% but this really depends on the use case. Of course, we would want something closer to 100%, which probably would be achievable if we would have a bigger dataset but considering that this is a learning case and we had only nearly 3.5k rows, I think it is a pretty good result. But for other indicators, our recall value of 60% is considered ***decent*** and our precision value barely touches the threshold of 70% which is the minimum for a model to be useful. "
    ]
   },
   {
@@ -918,7 +948,13 @@
    "metadata": {},
    "source": [
     "# Conclusion \n",
-    "Firstly, I thought that BMI, BloodPressure and SkinThickness would have a much more impact on the outcome but as our feature selection and heatmap shows is that they are less impactful as Age, Glucose and Insulin. Secondly, genetic score of diabetes (Diabetes pedigree function) is not as impactful as it sounds, in fact, it is almost insignificant. Thirdly, dataset proves that diabetes is more common with older people as there are more people having diabetes in the 26+ category but there are more healthy people below 26. "
+    "Firstly, I thought that BMI, BloodPressure and SkinThickness would have a much more impact on the outcome but as our feature selection and heatmap shows is that they are less impactful as Age, Glucose and Insulin. \n",
+    "\n",
+    "Secondly, genetic score of diabetes (Diabetes pedigree function) is not as impactful as it sounds, in fact, it is almost insignificant. \n",
+    "\n",
+    "Thirdly, the dataset proves that diabetes is more common with older people as there are more people having diabetes in the 26+ category but there are more healthy people below 26. To note, the dataset may also be ***biased*** towards people with diabetes, as the data may be collected when someone is tested for diabetes. It doesn't describe general population.\n",
+    "\n",
+    "In the end, the model we created is decent performing. It would be interesting to explore what if we had other features included like an indicator of cholesterol level or if there are indicators more impactful than we already have. "
    ]
   }
  ],
